tests/ui/rfcs/rfc-2093-infer-outlives/reference.stderr
error: rustc_outlives
  --> $DIR/reference.rs:4:1
   |
LL | struct Foo<'a, T> {
   | ^^^^^^^^^^^^^^^^^
   |
   = note: T: 'a

error[E0640]: rustc_outlives
  --> $DIR/reference.rs:4:1
   |
LL | struct Foo<'a, T> {
   | ^^^^^^^^^^^^^^^^^
   |
note: T: 'a
  --> $DIR/reference.rs:6:5
   |
LL |     bar: &'a T,
   |     ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0640`.
